Updated About Us.

--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -8,10 +8,17 @@
     form{
         padding: 0px;
     }
+
+    .custom-background {
+        background-image: url("/images/ec1img.jpg");
+        background-size: cover;
+        background-position: center;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
 </style>
 
 <main class="container">
-    <div class="p-4 p-md-5 mb-4 text-white rounded bg-primary text-center">
+    <div class="p-4 p-md-5 mb-4 text-white rounded text-center custom-background">
         <div class="col-md-6 mx-auto">
             <h1><img src="/white-logo-horizontal.png" alt="" id="logo"></h1>
             <p class="lead my-3">Together, we stand stronger in the face of adversity.</p>
@@ -47,21 +54,25 @@
                     <div class="col-md-6">
                         <img src="/images/tagala.png" alt="Agatha Gwen Tagala" class="bd-placeholder-img rounded-circle" width="140" height="140">
                         <h5 class="pt-2">Agatha Gwen Tagala</h5>
+                        <p> Sample Description</p>
                     </div>
 
                     <div class="col-md-6">
                         <img src="/images/guzon.png" alt="Jeanne Margaret Guzon" class="bd-placeholder-img rounded-circle" width="140" height="140">
                         <h5 class="pt-2">Jeanne Margaret Guzon</h5>
+                        <p> Sample Description </p>
                     </div>
 
                     <div class="col-md-6">
                         <img src="/images/bartolome.jpg" alt="Ian Vincent Bartolome" class="bd-placeholder-img rounded-circle" width="140" height="140">
                         <h5 class="pt-2">Ian Vincent Bartolome</h5>
+                        <p> Sample Description</p>
                     </div>
 
                     <div class="col-md-6">
-                        <img src="/images/sudaria.jpg" alt="Patrick Sudaria" class="bd-placeholder-img rounded-circle" width="140" height="140">
+                        <img src="/images/sudaria.png" alt="Patrick Sudaria" class="bd-placeholder-img rounded-circle" width="140" height="140">
                         <h5 class="pt-2">Patrick Sudaria</h5>
+                        <p> Sample Description</p>
                     </div>
                 </div>
             </div>  
