--- a/Pages/disaster/profile/informationboard/Index.cshtml
+++ b/Pages/disaster/profile/informationboard/Index.cshtml
@@ -253,8 +253,8 @@
                                 <td>@Model.GetTotalDistinctPwdCount()</td>
                             </tr>
                             <tr>
-                                <th>No. of 4Ps Beneficiary</th>
-                                <td>@Model.GetTotalDistinctBeneficiaryCount()</td>
+                                <th>No. of Indigenous Persons</th>
+                                <td>@Model.GetTotalDistinctIPCount()</td>
                             </tr>
                         </table>
 
