Add family & family head backend done

--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -78,14 +78,14 @@
 					<i class="bi bi-box-arrow-down"></i> Import .CSV File
 
 				</a>
-				<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/family/profile/add/index">
+				<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/family/add/index">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
 				</a>
 
 				<a class="btn btn-primary mb-2 button-spacing d-sm-none" href="/family">
 					<i class="bi bi-box-arrow-down"></i>
 				</a>
-				<a class="btn btn-primary mb-2 d-sm-none" href="/family/profile/add/index">
+				<a class="btn btn-primary mb-2 d-sm-none" href="/family/add/index">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
 				</a>
 			</div>
