Edited the Disaster Profile Page, and it's filter.

--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -241,17 +241,17 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <table>
+                <tables>
                     <tr>
-                        <th class="text-start pe-4">Type</th>
+                        <th width="35%" class="text-start pe-4">Type</th>
                         <td id="disasterType" class="text-start"></td>
                     </tr>
                     <tr>
-                        <th class="text-start pe-4">Description</th>
+                        <th width="35%" class=" text-start pe-4">Description</th>
                         <td id="description" class="text-start"></td>
                     </tr>
                     <tr>
-                        <th class="text-start pe-4">Date Occurred</th>
+                        <th width="35%" class=" text-start pe-4">Date Occurred</th>
                         <td id="dateOccured" class="text-start"></td>
                     </tr>
                 </table>
