--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -109,7 +109,7 @@
 								<h1>Entry Log</h1>
 							</div>
 
-							<div class="d-flex justify-content-between align-items-center">
+							<div class="d-flex gap-2 justify-content-center align-items-center">
 								<a id="checkInButton" class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/entrylog/checkin?centerLogID=@Model.logInfo.centerLogID">
 									<i class="bi bi-check-circle pt" style="padding: 5px;"></i> Check-in Evacuee
 								</a>
@@ -298,16 +298,6 @@
 	pageSelect.addEventListener('change', redirectToSelectedPage);
 </script>
 
-<!-- JS for Filter Button -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<style>
-	.dropdown-menu {
-		min-width: 225px; /* Change for minimum width of the filter menu */
-	}
-</style>
-
-
 <script>
 	$(document).ready(function () {
 		var table = $('#entrylog-table').DataTable({
@@ -318,7 +308,6 @@
 				{ "responsivePriority": -1, "targets": [0, 1, 4] } // Disable responsive for status column
 			]
 		});
-
 
 		table.columns([1, 3, 4]).every(function () {
 			var column = this;
