--- a/Pages/disaster/profile/inventory/Edit.cshtml
+++ b/Pages/disaster/profile/inventory/Edit.cshtml
@@ -25,36 +25,27 @@
 	</div>
 }
 
-<div class="container p-2 form-container">
-	<div class="container mt-4 form-container-content">
-		<div class="row">
-			<div class="col text-center">
-				<h1>Add Item</h1>
-			</div>
-		</div>
+<div class="bg-light rounded px-2 py-0 my-3 text-center">
+	<div class="col-lg-6 mx-auto">
+		<form method="POST" id="edit-item">
+			<h1 class="display-5 fw-bold text-center">Edit Item</h1>
+			<br />
 
-		<div class="row pt-4">
-			<form method="POST" id="edit-item">
-				<input type="hidden" name="centerLogID" value="@Model.inventoryInfo.centerLogID" />
-				<input type="hidden" name="inventoryID" value="@Model.inventoryInfo.inventoryID" />
-				<div class="row mb-3">
-					<p class="text-danger text-end">* Required field</p>
-				</div>
-				<!-- Item Name -->
-				<div class="mb-3">
-					<label class="form-label">
-						Item Name:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
+			<input type="hidden" name="centerLogID" value="@Model.inventoryInfo.centerLogID" />
+			<input type="hidden" name="inventoryID" value="@Model.inventoryInfo.inventoryID" />
+
+			<!-- Item Name -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="itemName">Item Name:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<input type="text" class="form-control" name="itemName" value="@Model.inventoryInfo.itemName" placeholder="ex. Rice" required maxlength="45">
 				</div>
+			</div>
 
-				<!-- Item Type -->
-				<div class="mb-3">
-					<label class="form-label">
-						Item Type:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
+			<!-- Item Type -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="itemType">Item Name:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<select class="form-select" name="itemType" required>
 						<option value="" selected disabled>Select Item Type</option>
 						<option value="Food">Food</option>
@@ -62,40 +53,40 @@
 						<option value="Monetary">Monetary</option>
 					</select>
 				</div>
+			</div>
 
-				<!-- Quantity -->
-				<div class="mb-3">
-					<label class="form-label">
-						Quantity:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
+			<!-- Quantity -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="qty">Quantity:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<input type="number" class="form-control" name="qty" value="@Model.inventoryInfo.qty" placeholder="0" step="1" min="0" required>
 				</div>
+			</div>
 
-				<!-- Unit Measure -->
-				<div class="mb-3">
-					<label class="form-label">
-						Unit Measure:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
+			<!-- Unit Measure -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="unitMeasure">Unit Measure:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<input type="text" class="form-control" name="unitMeasure" value="@Model.inventoryInfo.unitMeasure" placeholder="ex. Kilograms" required maxlength="45">
 				</div>
+			</div>
 
-				<!-- Remarks -->
-				<div class="mb-3">
-					<label class="form-label">
-						Remarks:
-					</label>
+			<!-- Remarks -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="remarks">Remarks:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<textarea class="form-control" name="remarks" rows="3" placeholder="ex. Donated by a private individual">@Model.inventoryInfo.remarks</textarea>
 				</div>
+			</div>
 
-				<!-- Cancel and Add Buttons -->
-				<div class="button-spacer">
-					<a class="btn btn-outline-secondary mr-10" href="/disaster/profile/inventory/index?centerLogID=@Model.inventoryInfo.centerLogID">Cancel</a>
-					<button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
-				</div>
-			</form>
-		</div>
+			<br />
+
+			<!-- Cancel and Save Button -->
+			<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+				<a href="/disaster/profile/inventory/index?centerLogID=@Model.inventoryInfo.centerLogID" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
+				<button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
+			</div>
+		</form>
 	</div>
 </div>
 
