--- a/Pages/disaster/profile/reliefgoodspack/Index.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Index.cshtml
@@ -122,15 +122,15 @@
 					<div class="col-lg-12">
 						<table id="reliefpack-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 							<thead>
-								<tr style="vertical-align:text-top;">
-									<th style="text-align:center;">#</th>
-									<th style="text-align:center;">Pack ID</th>
-									<th style="text-align:center;">
+								<tr>
+									<th>#</th>
+									<th>Pack ID</th>
+									<th>
 										Qty<br />
 										<small>(Remaining/Total)</small>
 									</th>
-									<th style="text-align:center;">Date Distributed</th>
-									<th style="text-align:center;">Status</th>
+									<th>Date Distributed</th>
+									<th>Status</th>
 									<th> </th>
 									<th> </th>
 								</tr>
@@ -142,9 +142,9 @@
 									<tr style="text-align:center;">
 										<td width="5%">@counter</td>
 										<td width="20%">@item.packID</td>
-										<td width="20%">@item.remainingQty/@item.packQty</td>
+										<td width="15%">@item.remainingQty/@item.packQty</td>
 										<td width="20%">@item.distributedAt</td>
-										<td width="10%">
+										<td width="15%">
 											@if (@item.status == "Distributed")
 											{
 												<span class="badge bg-success">@item.status</span>
@@ -253,37 +253,49 @@
 			]
 		});
 
-		// Adding filters to specific columns
 		table.columns([4]).every(function () {
 			var column = this;
-			var select = $('<select><option value=""></option></select>')
-				.appendTo($(column.header()))
-				.on('change', function () {
-					var val = $.fn.dataTable.util.escapeRegex(
-						$(this).val()
-					);
+			var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
+			var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
+			var menu = $('<div class="dropdown-menu p-3"></div>').appendTo(filterContainer);
 
-					column
-						.search(val ? '^' + val + '$' : '', true, false)
-						.draw();
-				});
+			function updateFilterButton() {
+				var hasActiveFilter = column.search() !== '';
+				btn.toggleClass('btn-warning', hasActiveFilter);
+			}
 
 			column.data().unique().sort().each(function (d, j) {
-				// Only add the options "Packed" and "Distributed" for the "Status" column
-				if (column.index() === 4) {
-					// Set specific filter options only if they haven't been added
-					if (select.find("option[value='Packed']").length == 0) {
-						select.append('<option value="Packed">Packed</option>');
-					}
-					if (select.find("option[value='Distributed']").length == 0) {
-						select.append('<option value="Distributed">Distributed</option>');
-					}
-				}
-				// For other columns, show all unique values as filter options
-				else {
-					select.append('<option value="' + d + '">' + d + '</option>');
-				}
+				menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="' + d + '">' +
+					'<label class="form-check-label ps-1">' + d + '</label></div>');
 			});
+
+			menu.prepend('<div class="form-check"><input class="form-check-input select-all" type="checkbox" value="select-all">' +
+				'<label class="form-check-label ps-1">Select All</label></div>');
+
+			menu.append('<hr class="dropdown-divider"><div class="p-1"><button type="button" class="btn btn-sm btn-light clear-filter"><i class="bi bi-eraser pe-1"></i>Clear Filter</button></div>');
+
+			menu.find('.form-check-input, .clear-filter').on('click', function () {
+				var checked = $(this).prop('checked');
+
+				if ($(this).hasClass('form-check-input')) {
+					if ($(this).val() === 'select-all') {
+						menu.find('.form-check-input').prop('checked', checked);
+					} else if (!checked) {
+						menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+					}
+				} else {
+					menu.find('.form-check-input').prop('checked', false);
+					menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+				}
+
+				var selectedValues = menu.find('.form-check-input:checked').map(function () {
+					return $(this).val();
+				}).get();
+
+				column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
+				updateFilterButton();
+			});
+			updateFilterButton();
 		});
 	});
 </script>
