Working yes no button in modal

--- a/Pages/Disaster/Profile/AllocateEC.cshtml
+++ b/Pages/Disaster/Profile/AllocateEC.cshtml
@@ -107,7 +107,7 @@
     </div>
 </div>
 
-<!-- Save Changes button in Modal -->
+<!-- Allocate button in Modal -->
 <script>
     document.getElementById('confirmSaveButton').addEventListener('click', function () {
         document.getElementById('saveAllocateEC').submit();
