--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -229,6 +229,15 @@
         </div>
     </div>
 </div>
+<div class="container">
+    <div class="p-4 p-md-5 mb-4 text-white rounded bg-primary text-center">
+        <div class="col-md-6 mx-auto">
+            <h1><img src="/white-logo-horizontal.png" alt="" id="logo"></h1>
+            <p class="lead my-3">Together, we stand stronger in the face of adversity.</p>
+            <a class="btn btn-outline-secondary text-white" href="#">Learn about Us</a>
+        </div>
+    </div>
+</div>
 
 
 <script>
